force-app/main/default/objects/PS_SalesforceConfig__c/PS_SalesforceConfig__c.object-meta.xml
<CustomObject>
    <label>Salesforce Config</label>
    <nameField>
        <label>Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesforce Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>