force-app/main/default/objects/PS_SalesforceConfig__c/fields/PS_AccessToken__c.field-meta.xml
<CustomField>
    <fullName>PS_AccessToken__c</fullName>
    <label>access token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>