force-app/main/default/objects/PS_SalesforceConfig__c/fields/PS_AuthUrl__c.field-meta.xml
<CustomField>
    <fullName>PS_AuthUrl__c</fullName>
    <defaultValue>&quot;/services/oauth2/authorize&quot;</defaultValue>
    <label>auth url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>