force-app/main/default/objects/PS_SalesforceConfig__c/fields/PS_ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>PS_ClientSecret__c</fullName>
    <label>client secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>