force-app/main/default/objects/PS_SalesforceConfig__c/fields/PS_Environment__c.field-meta.xml
<CustomField>
    <fullName>PS_Environment__c</fullName>
    <label>Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
                <default>true</default>
                <label>Production</label>
            </value>
            <value>
                <fullName>Sandbox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>