force-app/main/default/objects/PS_SalesforceConfig__c/fields/PS_EpiresIn__c.field-meta.xml
<CustomField>
    <fullName>PS_EpiresIn__c</fullName>
    <label>expires in ( seconds )</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>