force-app/main/default/objects/PS_SalesforceConfig__c/fields/PS_ExpiresInTime__c.field-meta.xml
<CustomField>
    <fullName>PS_ExpiresInTime__c</fullName>
    <label>expires in time</label>
    <type>DateTime</type>
</CustomField>