force-app/main/default/objects/PS_SalesforceConfig__c/fields/PS_InstanceUrl__c.field-meta.xml
<CustomField>
    <fullName>PS_InstanceUrl__c</fullName>
    <label>instance url</label>
    <type>Url</type>
</CustomField>