force-app/main/default/objects/PS_SalesforceConfig__c/fields/PS_PageName__c.field-meta.xml
<CustomField>
    <fullName>PS_PageName__c</fullName>
    <label>PageName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>