force-app/main/default/objects/PS_SalesforceConfig__c/fields/PS_RefreshToken__c.field-meta.xml
<CustomField>
    <fullName>PS_RefreshToken__c</fullName>
    <label>refresh token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>