force-app/main/default/objects/PS_SalesforceConfig__c/fields/PS_Scope__c.field-meta.xml
<CustomField>
    <fullName>PS_Scope__c</fullName>
    <label>scope</label>
    <type>TextArea</type>
</CustomField>