force-app/main/default/objects/PS_SalesforceConfig__c/fields/PS_TokenUrl__c.field-meta.xml
<CustomField>
    <fullName>PS_TokenUrl__c</fullName>
    <defaultValue>&quot;/services/oauth2/token&quot;</defaultValue>
    <label>token url</label>
    <type>Url</type>
</CustomField>